// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
var o = Object.freeze({ foo: 0 });
(o.foo: string);
module.exports = o;

=====================================output=====================================
var o = Object.freeze({ foo: 0 });
(o.foo: string);
module.exports = o;

================================================================================
`;

exports[`test2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
var o = require('./test');
(o.foo: string);

=====================================output=====================================
var o = require("./test");
(o.foo: string);

================================================================================
`;
